# Taller-NFS-Grupo-08

./: .gitignore  CMakeLists.txt  MakefileThreads  README.md  run_client.sh  run_server.sh
scripts/: install_ubuntu20.sh  run_client.sh  run_editor.sh  run_server.sh  run_tests.sh
src/client/: CMakeLists.txt  ClientQuitException.h  InvalidId.h  audio_manager.cpp  audio_manager.h  camera_manager.cpp  camera_manager.h  car_sprites.yaml  checkpoints_hints.yaml  client.cpp  client.h  client_car.cpp  client_car.h  client_handler.cpp  client_handler.h  client_protocol.cpp  client_protocol.h  client_receiver.cpp  client_receiver.h  client_sender.cpp  client_sender.h  config.h  game_renderer.cpp  game_renderer.h  graphic_client.cpp  graphic_client.h  input_parser.cpp  input_parser.h  main.cpp  minimap_renderer.cpp  minimap_renderer.h  pause_menu.cpp  pause_menu.h  sprite_loader.h  (+10 more)
src/editor/: CMakeLists.txt  checkpoint_manager.cpp  checkpoint_manager.h  city_config.cpp  city_config.h  city_selec.cpp  city_selec.h  collision_validator.cpp  collision_validator.h  editor_input_handler.cpp  editor_input_handler.h  editor_toolbar.cpp  editor_toolbar.h  editor_window.cpp  editor_window.h  hint_generator.cpp  hint_generator.h  hint_manager.cpp  hint_manager.h  main.cpp  map_renderer.cpp  map_renderer.h  race_track_data.h  track_file_manager.cpp  track_file_manager.h  track_serializer.cpp  track_serializer.h  yaml_parser.cpp  yaml_parser.h
tests/: CMakeLists.txt  foo.cpp  test_client_protocol.cpp  test_integration.cpp  test_protocol.cpp  test_server_protocol.cpp  test_socket_mock.cpp
(+126 files in other folders)
